--- a/templates/main_blog.html
+++ b/templates/main_blog.html
@@ -3,18 +3,25 @@
 {% block content %}
 
     <h1>Bulid a Blog!</h1>
-    {% if posts|length == 0 %}
-    <p>no blogs yet</p>
+    {% if id %}
+        {% for blog in id %}
+        <h1>{{blog.title}}</h1>
+        <p>{{blog.body}}</p>
+        {% endfor %}
     {% else %}
-        <article>
-            {% for title in posts %}
-            <h1>{{title.title}}</h1>
-            <p>{{title.body}}</p>
-            <hr /> 
-            {% endfor %}
-        </article>
-        
-     
+        {% if posts|length == 0 %}
+        <p>no blogs yet</p>
+        {% else %}
+            <article>
+                {% for title in posts %}
+                <a href="/blog?id={{title.id}}"><h1>{{title.title}}</h1></a>
+                <p>{{title.body}}</p>
+                <hr /> 
+                {% endfor %}
+            </article> 
+
+
+        {% endif %}
     {% endif %}
 
 {% endblock %}
