--- a/templates/main_blog.html
+++ b/templates/main_blog.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h1>Bulid a Blog!</h1>
+    <h1>Build a Blog!</h1>
     {% if id %}
         {% for blog in id %}
         <h1>{{blog.title}}</h1>
