--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,10 @@
 
         <a href="/blog">Main Blog Page</a> 
         <a href="/newpost">Add a Blog Entry</a>
+        <div>
+            <a href="/login">Log in</a>
+            <a href="/logout">Logout</a>
+        </div>
 
         {% with messages = get_flashed_messages(with_categories=True) %}
             <ul>
