--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     </head>
     <body>
 
+        <a href="/">Home</a>
         <a href="/blog">Main Blog Page</a> 
         <a href="/newpost">Add a Blog Entry</a>
         <div>
